Fixes spacing

--- a/themes/nua/src/less/components/hero.less
+++ b/themes/nua/src/less/components/hero.less
@@ -4,8 +4,10 @@
   overflow: hidden;
 }
 
-.c-hero__title {
-  margin-bottom: 0;
+@screen md {
+  .c-hero__title {
+    margin-bottom: 0;
+  }
 }
 
 @screen lg {
